--- a/Application/app/src/main/res/layout/second_activity.xml
+++ b/Application/app/src/main/res/layout/second_activity.xml
@@ -298,6 +298,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@color/colorRedButton"
+        android:textOff="@string/space"
+        android:textOn="@string/o"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -309,6 +311,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@color/colorBlueButton"
+        android:textOff="@string/space"
+        android:textOn="@string/o"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.071"
@@ -321,6 +325,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@color/colorGreenButton"
+        android:textOff="@string/space"
+        android:textOn="@string/o"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/red"
         app:layout_constraintHorizontal_bias="0.907"
@@ -333,6 +339,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@color/colorPurpleButton"
+        android:textOff="@string/space"
+        android:textOn="@string/o"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/green"
         app:layout_constraintHorizontal_bias="0.894"
@@ -345,6 +353,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@color/colorYellowButton"
+        android:textOff="@string/space"
+        android:textOn="@string/o"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.158"
@@ -357,6 +367,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@color/colorOrangeButton"
+        android:textOff="@string/space"
+        android:textOn="@string/o"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/purple"
         app:layout_constraintHorizontal_bias="0.758"
@@ -369,6 +381,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:background="@color/colorPinkButton"
+        android:textOff="@string/space"
+        android:textOn="@string/o"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.203"
