--- a/Application/app/src/main/res/values/colors.xml
+++ b/Application/app/src/main/res/values/colors.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#233143</color>
-    <color name="colorPrimaryDark">#C5C5C5</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorBackground">#222a35</color>
     <color name="colorFont">#ffffff</color>
     <color name="colorClose">#2f5596</color>
-    <color name="colorRedButton">#FF0000</color>
-    <color name="colorGreenButton">#00FF0A</color>
-    <color name="colorBlueButton">#0000FF</color>
-    <color name="colorPurpleButton">#5C00FF</color>
-    <color name="colorYellowButton">#FFFF00</color>
-    <color name="colorOrangeButton">#FF6400</color>
+    <color name="colorRedButton">#C52F2F</color>
+    <color name="colorGreenButton">#4CAF50</color>
+    <color name="colorBlueButton">#3345AC</color>
+    <color name="colorPurpleButton">#673AB7</color>
+    <color name="colorYellowButton">#FFEB3B</color>
+    <color name="colorOrangeButton">#FF5722</color>
     <color name="colorPinkButton">#FF9FAD</color>
 </resources>
