--- a/Application/app/src/main/res/layout/second_activity.xml
+++ b/Application/app/src/main/res/layout/second_activity.xml
@@ -87,6 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/crit"
         app:layout_constraintVertical_bias="0.051" />
 
+<!--    fix later-->
     <ToggleButton
         android:id="@+id/_2"
         android:layout_width="43dp"
